# vectorlab

./: .coveragerc  .gitignore  LICENSE  LICENSE.txt  README.md  codecov.yml  pyproject.toml  requirements.txt  test_requirements.txt  tox.ini
.github/workflows/: develop_test.yml  testing.yml
examples/data/: ts_dataset.py
examples/nn/: ae.py  fast_gae.py  fast_vgae.py  gae.py  gnn.py  seq2seq.py
examples/plot/: plot.py
examples/stats/: deg_graph.py  freq_tree.py  t_digest.py
vectorlab/: __init__.py  base.py
vectorlab/data/: __init__.py  _argument_generator.py  _data_generator.py
vectorlab/data/dataloader/: __init__.py  _torch_dataloader.py  _torch_geometric_dataloader.py
vectorlab/data/dataloader/tests/: test_torch_dataloader.py
vectorlab/data/dataset/: __init__.py  _torch_dataset.py  _ts_dataset.py
vectorlab/data/tests/: test_argument_generator.py  test_data_generator.py
vectorlab/ensemble/: __init__.py  _voting.py
vectorlab/ensemble/tests/: test_ensemble_voting.py
vectorlab/graph/: __init__.py  _generator.py  _utils.py
vectorlab/graph/tests/: test_graph_generator.py  test_graph_utils.py
vectorlab/graph/walking/: __init__.py  _bfs.py  _dfs.py  _random_walk.py
vectorlab/graph/walking/tests/: test_graph_walking.py
vectorlab/metrics/: __init__.py
vectorlab/metrics/pairwise/: __init__.py  _dtw.py  _kl_div.py  _lp_norm.py  _sbd.py
vectorlab/metrics/pairwise/tests/: test_metrics_pairwise.py
vectorlab/nn/: __init__.py  _earlystopping.py  _logger.py  _resolver.py  explorer.py  functional.py  resolver.py
vectorlab/nn/models/: __init__.py  _autoencoder.py  _basic_gnn.py  _classifier.py  _decoder.py  _encoder.py  _gnn_decoder.py  _mlp.py  _seq2seq.py
vectorlab/nn/models/tests/: test_decoder.py  test_encoder.py  test_seq2seq.py
vectorlab/nn/modules/: __init__.py  gnn_loss.py  loss.py
vectorlab/nn/tests/: test_explorer.py  test_functional.py
vectorlab/optimize/: __init__.py  _estimate.py  _qap.py
vectorlab/optimize/tests/: test_estimate.py
vectorlab/plot/: __init__.py  _helper.py  _palettes.py  _plot.py
vectorlab/plot/tests/: test_plot.py
vectorlab/series/: __init__.py  _preprocessing.py  _utils.py
vectorlab/series/smoothing/: __init__.py  _arima.py  _holt_winters.py  _moving_average.py  _spectral_residual.py
vectorlab/series/smoothing/tests/: test_series_smoothing.py
vectorlab/series/tests/: test_series_preprocessing.py
vectorlab/stats/: __init__.py  _deg_graph.py  _freq_tree.py  _t_digest.py
vectorlab/stats/tests/: test_deg_graph.py  test_freq_tree.py  test_t_digest.py
vectorlab/utils/: __init__.py  _check.py  _env.py  _loading.py  _parser.py  _time.py
vectorlab/utils/tests/: test_time.py
vectorlab/vector/: __init__.py  _array.py  _tensor.py
vectorlab/vector/tests/: test_array.py  test_tensor.py
