[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorlab"
version = "0.0.1"
authors = [
  { name="Kyle Yang", email="kyle.yang1995@gmail.com" },
  { name="Emma Qin", email="emmaqin0722@gmail.com" }
]
description = "A lab for vectors."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]