[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "vectorlab"
description = "A lab for vectors."
authors = [
  { name="Kyle Yang", email="kyle.yang1995@gmail.com" },
  { name="Emma Qin", email="emmaqin0722@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23.2",
    "scipy>=1.9.0",
    "pandas>=1.4.3",
    "networkx>=2.8.6",
    "statsmodels>=0.13.2",
    "scikit-learn>=1.1.2",
    "matplotlib>=3.5.3",
    "seaborn>=0.11.2",
    "pillow>=9.2.0",
    "pytz>=2022.2.1",
    "dill>=0.3.5.1",
    "halo>=0.0.31",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
torch = [
    "torch>=1.9.0"
]
test = [
    "pytest>=7.1.2",
    "pytest-repeat>=0.9.1",
    "pytest-benchmark>=3.4.1"
]