[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "vectorlab"
description = "A lab for vectors."
authors = [
  {name="Kyle Yang", email="kyle.yang1995@gmail.com"},
  {name="Emma Qin", email="emmaqin0722@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23.2",
    "scipy>=1.9.0",
    "pandas>=1.4.3",
    "networkx>=2.8.6",
    "statsmodels>=0.13.2",
    "scikit-learn>=1.1.2",
    "matplotlib>=3.5.3",
    "seaborn>=0.11.2",
    "pillow>=9.2.0",
    "pytz>=2022.2.1",
    "dill>=0.3.5.1",
    "halo>=0.0.31",
    "pyyaml>=6.0",
    "wandb>=0.15.0",
    "torchinfo>=1.6.3",
    "tensorboard>=2.6.0",
    "evaluate==0.4.0",
    "accelerate>=0.18.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pytest-repeat>=0.9.1",
    "pytest-benchmark>=3.4.1"
]
full = [
    "torch>=1.10.0",
    "torch-sparse>=0.6.12",
    "torch-cluster>=1.6.0",
    "torch-scatter>=2.0.9",
    "torch-spline-conv>=1.2.1",
    "torch-geometric>=2.0.4"
]

[tool.coverage.run]
omit = [
    "vectorlab/data/dataset/*"
]

[tool.coverage.report]
exclude_lines = [
    "raise",
    "except",
    "warn"
]